exports[`test renders the Walkthrough component at each stage for Android 1`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "flex": 1,
        "paddingTop": 64,
      }
    }>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-ExtraBold",
            "fontSize": 30,
            "marginBottom": -2,
            "textAlign": "center",
          }
        }>
        Let\'s get started!
      </Text>
      <View
        style={
          Object {
            "height": 32,
          }
        } />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-Regular",
            "fontSize": 16,
            "textAlign": "left",
          }
        }>
        What is your kid\'s name?
      </Text>
      <View
        style={
          Object {
            "height": 16,
          }
        } />
      <TextInput
        autoCapitalize="words"
        autoCorrect={false}
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholderTextColor="rgba(75, 73, 73, 0.8)"
        style={
          Object {
            "backgroundColor": "#EFEFEF",
            "borderRadius": 4,
            "color": "rgba(75, 73, 73, 1)",
            "fontFamily": "Raleway-Regular",
            "height": 32,
            "paddingHorizontal": 8,
            "width": 686,
          }
        }
        underlineColorAndroid="rgba(255, 255, 255, 1)" />
      <View
        style={
          Object {
            "height": 24,
          }
        } />
      <View
        style={
          Object {
            "alignItems": "center",
          }
        }>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Next step
             
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for Android 2`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "flex": 1,
        "paddingTop": 64,
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-ExtraBold",
            "fontSize": 30,
            "marginBottom": -2,
            "textAlign": "center",
          }
        }>
        Thanks, 
        Jeff Bezos
        !
      </Text>
      <View
        style={
          Object {
            "height": 32,
          }
        } />
      <Image
        animation={undefined}
        duration={undefined}
        iterationCount={undefined}
        source={1}
        style={
          Object {
            "borderColor": undefined,
            "borderRadius": 102,
            "borderWidth": 10.2,
            "height": 204,
            "marginBottom": 20.4,
            "shadowColor": "rgba(0,0,0,0.5)",
            "shadowOffset": Object {
              "height": 2,
            },
            "shadowRadius": 5,
            "width": 204,
          }
        } />
      <View
        style={
          Object {
            "height": 32,
          }
        } />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-Regular",
            "fontSize": 16,
            "textAlign": "left",
          }
        }>
        Now, let\'s set a picture for 
        Brett
        .
      </Text>
      <View
        style={
          Object {
            "height": 24,
          }
        } />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-Regular",
            "fontSize": 16,
            "textAlign": "left",
          }
        }>
        Don\'t worry, only you will be able to see it.
      </Text>
      <View
        style={
          Object {
            "height": 32,
          }
        } />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "width": 686,
          }
        }>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Not right now
             
          </Text>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Set a picture for 
            Brett
             
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for Android 3`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-ExtraBold",
            "fontSize": 30,
            "marginBottom": -2,
            "textAlign": "center",
          }
        }>
        Enter the setup code 
        1234
      </Text>
      <View
        style={
          Object {
            "height": 96,
          }
        } />
      <View>
        <ActivityIndicator
          animating={true}
          color="#FFF"
          hidesWhenStopped={true}
          size="large"
          style={
            Object {
              "marginBottom": 16,
            }
          } />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#FFF",
              "fontFamily": "Raleway-Regular",
              "fontSize": 18,
              "fontWeight": "200",
              "textAlign": "center",
            }
          }>
          Waiting for 
          Brett
          \'s device...
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for Android 4`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "flex": 1,
        "paddingTop": 64,
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#FFF",
              "fontFamily": "Raleway-ExtraBold",
              "fontSize": 30,
              "marginBottom": -2,
              "textAlign": "center",
            }
          }>
          Tap \"Next Step\"
        </Text>
        <View
          style={
            Object {
              "height": 64,
            }
          } />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Next Step
             
          </Text>
        </View>
      </View>
      <View>
        <Image
          animation="bounceInUp"
          resizeMode="contain"
          source={Object {}}
          style={
            Object {
              "height": 1334,
              "marginTop": -667,
              "top": 667,
              "width": 654,
            }
          } />
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for Android 5`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "flex": 1,
        "paddingTop": 64,
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#FFF",
              "fontFamily": "Raleway-ExtraBold",
              "fontSize": 30,
              "marginBottom": -2,
              "textAlign": "center",
            }
          }>
          Tap \"Install\"
        </Text>
        <View
          style={
            Object {
              "height": 64,
            }
          } />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Next Step
             
          </Text>
        </View>
      </View>
      <View>
        <Image
          animation="bounceInUp"
          resizeMode="contain"
          source={1}
          style={
            Object {
              "height": 1334,
              "marginTop": -667,
              "top": 667,
              "width": 654,
            }
          } />
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for Android 6`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#FFF",
              "fontFamily": "Raleway-ExtraBold",
              "fontSize": 30,
              "marginBottom": -2,
              "textAlign": "center",
            }
          }>
          Tap \"Open\"
        </Text>
        <View
          style={
            Object {
              "height": 64,
            }
          } />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Next Step
             
          </Text>
        </View>
      </View>
      <View>
        <Image
          animation="bounceInUp"
          resizeMode="contain"
          source={1}
          style={
            Object {
              "height": 1334,
              "marginTop": -667,
              "top": 667,
              "width": 654,
            }
          } />
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for Android 7`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#FFF",
              "fontFamily": "Raleway-ExtraBold",
              "fontSize": 30,
              "marginBottom": -2,
              "textAlign": "center",
            }
          }>
          Enter the code 1234 again
        </Text>
        <View
          style={
            Object {
              "height": 64,
            }
          } />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Next Step
             
          </Text>
        </View>
      </View>
      <View>
        <Image
          animation="bounceInUp"
          resizeMode="contain"
          source={1}
          style={
            Object {
              "height": 1334,
              "marginTop": -667,
              "top": 667,
              "width": 654,
            }
          } />
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for Android 8`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#FFF",
              "fontFamily": "Raleway-ExtraBold",
              "fontSize": 30,
              "marginBottom": -2,
              "textAlign": "center",
            }
          }>
          Tap \"OK\"
        </Text>
        <View
          style={
            Object {
              "height": 64,
            }
          } />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Next Step
             
          </Text>
        </View>
      </View>
      <View>
        <Image
          animation="bounceInUp"
          resizeMode="contain"
          source={1}
          style={
            Object {
              "height": 1334,
              "marginTop": -667,
              "top": 667,
              "width": 654,
            }
          } />
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for Android 9`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }>
    <View>
      <ActivityIndicator
        animating={true}
        color="#FFF"
        hidesWhenStopped={true}
        size="large"
        style={
          Object {
            "marginBottom": 16,
          }
        } />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-Regular",
            "fontSize": 18,
            "fontWeight": "200",
            "textAlign": "center",
          }
        }>
        Waiting for traxi to start on 
        Brett
        \'s 
        Android
        ...
      </Text>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for iPad 1`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "flex": 1,
        "paddingTop": 64,
      }
    }>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-ExtraBold",
            "fontSize": 30,
            "marginBottom": -2,
            "textAlign": "center",
          }
        }>
        Let\'s get started!
      </Text>
      <View
        style={
          Object {
            "height": 32,
          }
        } />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-Regular",
            "fontSize": 16,
            "textAlign": "left",
          }
        }>
        What is your kid\'s name?
      </Text>
      <View
        style={
          Object {
            "height": 16,
          }
        } />
      <TextInput
        autoCapitalize="words"
        autoCorrect={false}
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholderTextColor="rgba(75, 73, 73, 0.8)"
        style={
          Object {
            "backgroundColor": "#EFEFEF",
            "borderRadius": 4,
            "color": "rgba(75, 73, 73, 1)",
            "fontFamily": "Raleway-Regular",
            "height": 32,
            "paddingHorizontal": 8,
            "width": 686,
          }
        }
        underlineColorAndroid="rgba(255, 255, 255, 1)" />
      <View
        style={
          Object {
            "height": 24,
          }
        } />
      <View
        style={
          Object {
            "alignItems": "center",
          }
        }>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Next step
             
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for iPad 2`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "flex": 1,
        "paddingTop": 64,
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-ExtraBold",
            "fontSize": 30,
            "marginBottom": -2,
            "textAlign": "center",
          }
        }>
        Thanks, 
        Jeff Bezos
        !
      </Text>
      <View
        style={
          Object {
            "height": 32,
          }
        } />
      <Image
        animation={undefined}
        duration={undefined}
        iterationCount={undefined}
        source={1}
        style={
          Object {
            "borderColor": undefined,
            "borderRadius": 102,
            "borderWidth": 10.2,
            "height": 204,
            "marginBottom": 20.4,
            "shadowColor": "rgba(0,0,0,0.5)",
            "shadowOffset": Object {
              "height": 2,
            },
            "shadowRadius": 5,
            "width": 204,
          }
        } />
      <View
        style={
          Object {
            "height": 32,
          }
        } />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-Regular",
            "fontSize": 16,
            "textAlign": "left",
          }
        }>
        Now, let\'s set a picture for 
        Brett
        .
      </Text>
      <View
        style={
          Object {
            "height": 24,
          }
        } />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-Regular",
            "fontSize": 16,
            "textAlign": "left",
          }
        }>
        Don\'t worry, only you will be able to see it.
      </Text>
      <View
        style={
          Object {
            "height": 32,
          }
        } />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "width": 686,
          }
        }>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Not right now
             
          </Text>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Set a picture for 
            Brett
             
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for iPad 3`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-ExtraBold",
            "fontSize": 30,
            "marginBottom": -2,
            "textAlign": "center",
          }
        }>
        Enter the setup code 
        1234
      </Text>
      <View
        style={
          Object {
            "height": 96,
          }
        } />
      <View>
        <ActivityIndicator
          animating={true}
          color="#FFF"
          hidesWhenStopped={true}
          size="large"
          style={
            Object {
              "marginBottom": 16,
            }
          } />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#FFF",
              "fontFamily": "Raleway-Regular",
              "fontSize": 18,
              "fontWeight": "200",
              "textAlign": "center",
            }
          }>
          Waiting for 
          Brett
          \'s device...
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for iPad 4`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "flex": 1,
        "paddingTop": 64,
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#FFF",
              "fontFamily": "Raleway-ExtraBold",
              "fontSize": 30,
              "marginBottom": -2,
              "textAlign": "center",
            }
          }>
          Tap the \"Install\" button in the top right
        </Text>
        <View
          style={
            Object {
              "height": 64,
            }
          } />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Next Step
             
          </Text>
        </View>
      </View>
      <View>
        <Image
          animation="bounceInUp"
          resizeMode="contain"
          source={1}
          style={
            Object {
              "height": 1334,
              "marginTop": -667,
              "top": 667,
              "width": 654,
            }
          } />
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for iPad 5`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "flex": 1,
        "paddingTop": 64,
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#FFF",
              "fontFamily": "Raleway-ExtraBold",
              "fontSize": 30,
              "marginBottom": -2,
              "textAlign": "center",
            }
          }>
          Tap the \"Install\" button again (don\'t worry, this is normal)
        </Text>
        <View
          style={
            Object {
              "height": 64,
            }
          } />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Next Step
             
          </Text>
        </View>
      </View>
      <View>
        <Image
          animation="bounceInUp"
          resizeMode="contain"
          source={1}
          style={
            Object {
              "height": 1334,
              "marginTop": -667,
              "top": 667,
              "width": 654,
            }
          } />
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for iPad 6`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#FFF",
              "fontFamily": "Raleway-ExtraBold",
              "fontSize": 30,
              "marginBottom": -2,
              "textAlign": "center",
            }
          }>
          Tap \"Install\" for the last time (promise)
        </Text>
        <View
          style={
            Object {
              "height": 64,
            }
          } />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Next Step
             
          </Text>
        </View>
      </View>
      <View>
        <Image
          animation="bounceInUp"
          resizeMode="contain"
          source={1}
          style={
            Object {
              "height": 1334,
              "marginTop": -667,
              "top": 667,
              "width": 654,
            }
          } />
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for iPad 7`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#FFF",
              "fontFamily": "Raleway-ExtraBold",
              "fontSize": 30,
              "marginBottom": -2,
              "textAlign": "center",
            }
          }>
          Tap \"Done\"
        </Text>
        <View
          style={
            Object {
              "height": 64,
            }
          } />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Next Step
             
          </Text>
        </View>
      </View>
      <View>
        <Image
          animation="bounceInUp"
          resizeMode="contain"
          source={1}
          style={
            Object {
              "height": 1334,
              "marginTop": -667,
              "top": 667,
              "width": 654,
            }
          } />
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for iPad 8`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }>
    <View>
      <ActivityIndicator
        animating={true}
        color="#FFF"
        hidesWhenStopped={true}
        size="large"
        style={
          Object {
            "marginBottom": 16,
          }
        } />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-Regular",
            "fontSize": 18,
            "fontWeight": "200",
            "textAlign": "center",
          }
        }>
        Waiting for traxi to start on 
        Brett
        \'s 
        iPad
        ...
      </Text>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for iPhone 1`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "flex": 1,
        "paddingTop": 64,
      }
    }>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-ExtraBold",
            "fontSize": 30,
            "marginBottom": -2,
            "textAlign": "center",
          }
        }>
        Let\'s get started!
      </Text>
      <View
        style={
          Object {
            "height": 32,
          }
        } />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-Regular",
            "fontSize": 16,
            "textAlign": "left",
          }
        }>
        What is your kid\'s name?
      </Text>
      <View
        style={
          Object {
            "height": 16,
          }
        } />
      <TextInput
        autoCapitalize="words"
        autoCorrect={false}
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholderTextColor="rgba(75, 73, 73, 0.8)"
        style={
          Object {
            "backgroundColor": "#EFEFEF",
            "borderRadius": 4,
            "color": "rgba(75, 73, 73, 1)",
            "fontFamily": "Raleway-Regular",
            "height": 32,
            "paddingHorizontal": 8,
            "width": 686,
          }
        }
        underlineColorAndroid="rgba(255, 255, 255, 1)" />
      <View
        style={
          Object {
            "height": 24,
          }
        } />
      <View
        style={
          Object {
            "alignItems": "center",
          }
        }>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Next step
             
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for iPhone 2`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "flex": 1,
        "paddingTop": 64,
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
        }
      }>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-ExtraBold",
            "fontSize": 30,
            "marginBottom": -2,
            "textAlign": "center",
          }
        }>
        Thanks, 
        Jeff Bezos
        !
      </Text>
      <View
        style={
          Object {
            "height": 32,
          }
        } />
      <Image
        animation={undefined}
        duration={undefined}
        iterationCount={undefined}
        source={1}
        style={
          Object {
            "borderColor": undefined,
            "borderRadius": 102,
            "borderWidth": 10.2,
            "height": 204,
            "marginBottom": 20.4,
            "shadowColor": "rgba(0,0,0,0.5)",
            "shadowOffset": Object {
              "height": 2,
            },
            "shadowRadius": 5,
            "width": 204,
          }
        } />
      <View
        style={
          Object {
            "height": 32,
          }
        } />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-Regular",
            "fontSize": 16,
            "textAlign": "left",
          }
        }>
        Now, let\'s set a picture for 
        Brett
        .
      </Text>
      <View
        style={
          Object {
            "height": 24,
          }
        } />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-Regular",
            "fontSize": 16,
            "textAlign": "left",
          }
        }>
        Don\'t worry, only you will be able to see it.
      </Text>
      <View
        style={
          Object {
            "height": 32,
          }
        } />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "width": 686,
          }
        }>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Not right now
             
          </Text>
        </View>
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Set a picture for 
            Brett
             
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for iPhone 3`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-ExtraBold",
            "fontSize": 30,
            "marginBottom": -2,
            "textAlign": "center",
          }
        }>
        Enter the setup code 
      </Text>
      <View
        style={
          Object {
            "height": 96,
          }
        } />
      <View>
        <ActivityIndicator
          animating={true}
          color="#FFF"
          hidesWhenStopped={true}
          size="large"
          style={
            Object {
              "marginBottom": 16,
            }
          } />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#FFF",
              "fontFamily": "Raleway-Regular",
              "fontSize": 18,
              "fontWeight": "200",
              "textAlign": "center",
            }
          }>
          Waiting for 
          Brett
          \'s device...
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for iPhone 4`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "flex": 1,
        "paddingTop": 64,
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#FFF",
              "fontFamily": "Raleway-ExtraBold",
              "fontSize": 30,
              "marginBottom": -2,
              "textAlign": "center",
            }
          }>
          Tap the \"Install\" button in the top right
        </Text>
        <View
          style={
            Object {
              "height": 64,
            }
          } />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Next Step
             
          </Text>
        </View>
      </View>
      <View>
        <Image
          animation="bounceInUp"
          resizeMode="contain"
          source={1}
          style={
            Object {
              "height": 1334,
              "marginTop": -667,
              "top": 667,
              "width": 654,
            }
          } />
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for iPhone 5`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "flex": 1,
        "paddingTop": 64,
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#FFF",
              "fontFamily": "Raleway-ExtraBold",
              "fontSize": 30,
              "marginBottom": -2,
              "textAlign": "center",
            }
          }>
          Tap the \"Install\" button again (don\'t worry, this is normal)
        </Text>
        <View
          style={
            Object {
              "height": 64,
            }
          } />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Next Step
             
          </Text>
        </View>
      </View>
      <View>
        <Image
          animation="bounceInUp"
          resizeMode="contain"
          source={1}
          style={
            Object {
              "height": 1334,
              "marginTop": -667,
              "top": 667,
              "width": 654,
            }
          } />
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for iPhone 6`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#FFF",
              "fontFamily": "Raleway-ExtraBold",
              "fontSize": 30,
              "marginBottom": -2,
              "textAlign": "center",
            }
          }>
          Tap \"Install\" for the last time (promise)
        </Text>
        <View
          style={
            Object {
              "height": 64,
            }
          } />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Next Step
             
          </Text>
        </View>
      </View>
      <View>
        <Image
          animation="bounceInUp"
          resizeMode="contain"
          source={1}
          style={
            Object {
              "height": 1334,
              "marginTop": -667,
              "top": 667,
              "width": 654,
            }
          } />
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for iPhone 7`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#FFF",
              "fontFamily": "Raleway-ExtraBold",
              "fontSize": 30,
              "marginBottom": -2,
              "textAlign": "center",
            }
          }>
          Tap \"Done\"
        </Text>
        <View
          style={
            Object {
              "height": 64,
            }
          } />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          hitSlop={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "flexDirection": "row",
              "justifyContent": "center",
              "opacity": 1,
            }
          }
          testID={undefined}>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#FFF",
                "fontFamily": "Raleway-Regular",
                "fontSize": 20,
              }
            }>
            Next Step
             
          </Text>
        </View>
      </View>
      <View>
        <Image
          animation="bounceInUp"
          resizeMode="contain"
          source={1}
          style={
            Object {
              "height": 1334,
              "marginTop": -667,
              "top": 667,
              "width": 654,
            }
          } />
      </View>
    </View>
  </View>
</View>
`;

exports[`test renders the Walkthrough component at each stage for iPhone 8`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }>
    <View>
      <ActivityIndicator
        animating={true}
        color="#FFF"
        hidesWhenStopped={true}
        size="large"
        style={
          Object {
            "marginBottom": 16,
          }
        } />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-Regular",
            "fontSize": 18,
            "fontWeight": "200",
            "textAlign": "center",
          }
        }>
        Waiting for traxi to start on 
        Brett
        \'s 
        iPhone
        ...
      </Text>
    </View>
  </View>
</View>
`;

exports[`test renders the loading screen when waiting to identify a device 1`] = `
<View
  colors={
    Array [
      "#448AFF",
      "#90CAF9",
    ]
  }
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#448AFF",
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingTop": 16,
    }
  }>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "backgroundColor": "transparent",
            "color": "#FFF",
            "fontFamily": "Raleway-ExtraBold",
            "fontSize": 30,
            "marginBottom": -2,
            "textAlign": "center",
          }
        }>
        Enter the setup code 
        1234
      </Text>
      <View
        style={
          Object {
            "height": 96,
          }
        } />
      <View>
        <ActivityIndicator
          animating={true}
          color="#FFF"
          hidesWhenStopped={true}
          size="large"
          style={
            Object {
              "marginBottom": 16,
            }
          } />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "backgroundColor": "transparent",
              "color": "#FFF",
              "fontFamily": "Raleway-Regular",
              "fontSize": 18,
              "fontWeight": "200",
              "textAlign": "center",
            }
          }>
          Waiting for 
          Brett
          \'s device...
        </Text>
      </View>
    </View>
  </View>
</View>
`;
